text visibility fix

--- a/src/pages/components/footer/VideoFooter.css
+++ b/src/pages/components/footer/VideoFooter.css
@@ -3,16 +3,17 @@
     bottom: 20%;
     color: white;
     margin-left: 30px;
+    text-shadow: 0px 0px 10px #000000;
 }
 
 .video_footer_text h3{
     padding-bottom: 20px;
-    opacity: 70%;
+    opacity: 90%;
 }
 
 .video_footer_text p{
     padding-bottom: 20px;
-    opacity: 70%;
+    opacity: 90%;
 }
 
 .video_footer_music {
